# api/v1/resource_service.pb.go
@@ -32,7 +32,7 @@ var file_resource_service_proto_rawDesc = []byte{
 	0x18, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x5f, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74,
 	0x6f, 0x72, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1b, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
 	0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x65, 0x6d, 0x70, 0x74, 0x79,
-	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xf2, 0x06, 0x0a, 0x07, 0x53, 0x65, 0x72, 0x76, 0x69,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xc4, 0x07, 0x0a, 0x07, 0x53, 0x65, 0x72, 0x76, 0x69,
 	0x63, 0x65, 0x12, 0x64, 0x0a, 0x0c, 0x47, 0x65, 0x74, 0x44, 0x69, 0x72, 0x65, 0x63, 0x74, 0x6f,
 	0x72, 0x79, 0x12, 0x17, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x44, 0x69, 0x72, 0x65, 0x63,
 	0x74, 0x6f, 0x72, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x15, 0x2e, 0x76, 0x31,
@@ -76,19 +76,24 @@ var file_resource_service_proto_rawDesc = []byte{
 	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x11, 0x2e, 0x76, 0x31, 0x2e, 0x50, 0x61, 0x67, 0x65,
 	0x46, 0x69, 0x6c, 0x65, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02,
 	0x14, 0x12, 0x12, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x2f, 0x76, 0x31, 0x2f,
-	0x66, 0x69, 0x6c, 0x65, 0x73, 0x12, 0x59, 0x0a, 0x0a, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x46,
-	0x69, 0x6c, 0x65, 0x12, 0x15, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x46,
-	0x69, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f,
-	0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70,
-	0x74, 0x79, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01, 0x2a, 0x1a, 0x11, 0x2f,
-	0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x2f, 0x76, 0x31, 0x2f, 0x66, 0x69, 0x6c, 0x65,
-	0x12, 0x59, 0x0a, 0x0a, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x46, 0x69, 0x6c, 0x65, 0x12, 0x15,
-	0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x46, 0x69, 0x6c, 0x65, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1c, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01, 0x2a, 0x22, 0x11, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75,
-	0x72, 0x63, 0x65, 0x2f, 0x76, 0x31, 0x2f, 0x66, 0x69, 0x6c, 0x65, 0x42, 0x09, 0x5a, 0x07, 0x2e,
-	0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x66, 0x69, 0x6c, 0x65, 0x73, 0x12, 0x50, 0x0a, 0x0c, 0x47, 0x65, 0x74, 0x46, 0x69, 0x6c, 0x65,
+	0x42, 0x79, 0x53, 0x68, 0x61, 0x12, 0x17, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x46, 0x69,
+	0x6c, 0x65, 0x42, 0x79, 0x53, 0x68, 0x61, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x08,
+	0x2e, 0x76, 0x31, 0x2e, 0x46, 0x69, 0x6c, 0x65, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17,
+	0x12, 0x15, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x2f, 0x76, 0x31, 0x2f, 0x66,
+	0x69, 0x6c, 0x65, 0x2f, 0x73, 0x68, 0x61, 0x12, 0x59, 0x0a, 0x0a, 0x55, 0x70, 0x64, 0x61, 0x74,
+	0x65, 0x46, 0x69, 0x6c, 0x65, 0x12, 0x15, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74,
+	0x65, 0x46, 0x69, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67,
+	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01, 0x2a, 0x1a,
+	0x11, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x2f, 0x76, 0x31, 0x2f, 0x66, 0x69,
+	0x6c, 0x65, 0x12, 0x59, 0x0a, 0x0a, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x46, 0x69, 0x6c, 0x65,
+	0x12, 0x15, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x46, 0x69, 0x6c, 0x65,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22,
+	0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01, 0x2a, 0x22, 0x11, 0x2f, 0x72, 0x65, 0x73,
+	0x6f, 0x75, 0x72, 0x63, 0x65, 0x2f, 0x76, 0x31, 0x2f, 0x66, 0x69, 0x6c, 0x65, 0x42, 0x09, 0x5a,
+	0x07, 0x2e, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_resource_service_proto_goTypes = []interface{}{
@@ -99,14 +104,16 @@ var file_resource_service_proto_goTypes = []interface{}{
 	(*PrepareUploadFileRequest)(nil), // 4: v1.PrepareUploadFileRequest
 	(*UploadFileRequest)(nil),        // 5: v1.UploadFileRequest
 	(*PageFileRequest)(nil),          // 6: v1.PageFileRequest
-	(*UpdateFileRequest)(nil),        // 7: v1.UpdateFileRequest
-	(*DeleteFileRequest)(nil),        // 8: v1.DeleteFileRequest
-	(*GetDirectoryReply)(nil),        // 9: v1.GetDirectoryReply
-	(*Directory)(nil),                // 10: v1.Directory
-	(*emptypb.Empty)(nil),            // 11: google.protobuf.Empty
-	(*PrepareUploadFileReply)(nil),   // 12: v1.PrepareUploadFileReply
-	(*UploadFileReply)(nil),          // 13: v1.UploadFileReply
-	(*PageFileReply)(nil),            // 14: v1.PageFileReply
+	(*GetFileByShaRequest)(nil),      // 7: v1.GetFileByShaRequest
+	(*UpdateFileRequest)(nil),        // 8: v1.UpdateFileRequest
+	(*DeleteFileRequest)(nil),        // 9: v1.DeleteFileRequest
+	(*GetDirectoryReply)(nil),        // 10: v1.GetDirectoryReply
+	(*Directory)(nil),                // 11: v1.Directory
+	(*emptypb.Empty)(nil),            // 12: google.protobuf.Empty
+	(*PrepareUploadFileReply)(nil),   // 13: v1.PrepareUploadFileReply
+	(*UploadFileReply)(nil),          // 14: v1.UploadFileReply
+	(*PageFileReply)(nil),            // 15: v1.PageFileReply
+	(*File)(nil),                     // 16: v1.File
 }
 var file_resource_service_proto_depIdxs = []int32{
 	0,  // 0: v1.Service.GetDirectory:input_type -> v1.GetDirectoryRequest
@@ -116,19 +123,21 @@ var file_resource_service_proto_depIdxs = []int32{
 	4,  // 4: v1.Service.PrepareUploadFile:input_type -> v1.PrepareUploadFileRequest
 	5,  // 5: v1.Service.UploadFile:input_type -> v1.UploadFileRequest
 	6,  // 6: v1.Service.PageFile:input_type -> v1.PageFileRequest
-	7,  // 7: v1.Service.UpdateFile:input_type -> v1.UpdateFileRequest
-	8,  // 8: v1.Service.DeleteFile:input_type -> v1.DeleteFileRequest
-	9,  // 9: v1.Service.GetDirectory:output_type -> v1.GetDirectoryReply
-	10, // 10: v1.Service.AddDirectory:output_type -> v1.Directory
-	11, // 11: v1.Service.UpdateDirectory:output_type -> google.protobuf.Empty
-	11, // 12: v1.Service.DeleteDirectory:output_type -> google.protobuf.Empty
-	12, // 13: v1.Service.PrepareUploadFile:output_type -> v1.PrepareUploadFileReply
-	13, // 14: v1.Service.UploadFile:output_type -> v1.UploadFileReply
-	14, // 15: v1.Service.PageFile:output_type -> v1.PageFileReply
-	11, // 16: v1.Service.UpdateFile:output_type -> google.protobuf.Empty
-	11, // 17: v1.Service.DeleteFile:output_type -> google.protobuf.Empty
-	9,  // [9:18] is the sub-list for method output_type
-	0,  // [0:9] is the sub-list for method input_type
+	7,  // 7: v1.Service.GetFileBySha:input_type -> v1.GetFileByShaRequest
+	8,  // 8: v1.Service.UpdateFile:input_type -> v1.UpdateFileRequest
+	9,  // 9: v1.Service.DeleteFile:input_type -> v1.DeleteFileRequest
+	10, // 10: v1.Service.GetDirectory:output_type -> v1.GetDirectoryReply
+	11, // 11: v1.Service.AddDirectory:output_type -> v1.Directory
+	12, // 12: v1.Service.UpdateDirectory:output_type -> google.protobuf.Empty
+	12, // 13: v1.Service.DeleteDirectory:output_type -> google.protobuf.Empty
+	13, // 14: v1.Service.PrepareUploadFile:output_type -> v1.PrepareUploadFileReply
+	14, // 15: v1.Service.UploadFile:output_type -> v1.UploadFileReply
+	15, // 16: v1.Service.PageFile:output_type -> v1.PageFileReply
+	16, // 17: v1.Service.GetFileBySha:output_type -> v1.File
+	12, // 18: v1.Service.UpdateFile:output_type -> google.protobuf.Empty
+	12, // 19: v1.Service.DeleteFile:output_type -> google.protobuf.Empty
+	10, // [10:20] is the sub-list for method output_type
+	0,  // [0:10] is the sub-list for method input_type
 	0,  // [0:0] is the sub-list for extension type_name
 	0,  // [0:0] is the sub-list for extension extendee
 	0,  // [0:0] is the sub-list for field type_name
